test/scc/decl/semantic-errors/079.t
struct
{
    _Thread_local int a;
};